# premise

./: .appveyor.yml  .gitignore  .travis.yml  1 Basic setup.ipynb  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  cached_results-premise.json  initialize_notebook.ipynb  mapping_overview2.xlsx  premise_new_variables.xlsx  pyproject.toml  pytest.ini  readthedocs.yml  regionmappingH12.csv  requirements.txt  runme.py  setup.py
.github/workflows/: ai-scan.yml  main.yml  scan-ai.yml
ci/: conda_upload.sh  macos-travis.txt  meta.yaml
conda/: build.sh  conda_build_config.yaml  meta.yaml
data/: fix_names.csv  lci-Carma-CCS.xlsx
dev/: PV_mix_shares.xlsx  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  compare_brightway_exports.py  config.yaml  consequential scenarios.ipynb  custom scenarios.ipynb  example.xlsx  example_gcam.ipynb  generate_throughput_temporal_proposals.py  get_marginal_mixes.ipynb  inventory_bread.xlsx  inventory_fuel_cell.xlsx  main.prof  premise cleanup.ipynb  profile.prof  profiling.py  sample_db.xlsx  test pathways with multiple scenarios.ipynb  test.profile  test.py  test_consequential.ipynb  test_custom_scenarios.ipynb  test_premise.ipynb  test_trails.ipynb
dev/.ipynb_checkpoints/: custom scenarios-checkpoint.ipynb  premise cleanup-checkpoint.ipynb  test_consequential-checkpoint.ipynb  test_premise-checkpoint.ipynb
dev/trails/: 0_plot_group_distributions.py  1_stock_asset_review_with_codex.py  2_stock_asset_dashboard.py  3_stock_asset_fill_original.py  4_validate_differences_files.py  README.md  comparison_output.xlsx  stock_asset_grouped_temporal_defaults.xlsx  stock_asset_review_bw25_with_iedc.csv  temporal_distributions.csv  temporal_distributions_stock_asset_updated.csv
docs/: CONTRIBUTING.md  cdr_allocation_study_design.md  code.rst  conf.py  consequential.rst  extract.rst  extraction.rst  faq.rst  fuel_market_system_models.rst  gui.rst  index.rst  introduction.rst  load.rst  mapping.rst  pyproject.toml  pytest.ini  readthedocs.yml  table_1.csv  trails_temporal_distributions.rst  transform.rst  user_scenarios.rst
docs/_static/: custom.css
docs/_templates/: custom-module-template.rst
docs/docs/: conf.py  consequential.rst  faq.rst  index.rst  mapping.rst
docs/examples/: examples_score_comparison.ipynb
docs/premise/: electricity.py  filesystem_constants.py  logger.py  marginal_mixes.py  transport.py
docs/tests/: test_activity_maps.py  test_clean_datasets.py  test_export.py  (+4 more)
examples/: Untitled.ipynb  example_ecospold_without_brightway_project.ipynb  example_matrices_to_bw_processing.ipynb  examples user-defined scenarios.ipynb  examples.ipynb  examples_score_comparison.ipynb  missing_classifications.csv  read-gcam-validation.py  test-gcam.py  test_gcam.ipynb
gcam/: GCAM-Query.py
notebooks/: 1 Basic setup.ipynb  2 Add all carbon biosphere flows to GWP method.ipynb  3 Creating new versions of ecoinvent.ipynb  Add_REMIND_Technoflows.ipynb  EI2REMIND_Interface_Helpers.ipynb  LCA_of_every_dataset_in_every_scenario.ipynb  REMIND electricity sector biosphere flows.ipynb  REMIND_Functions_to_modify_ecoinvent.ipynb  REMIND_electricity_sector_bioflows.ipynb  REMIND_electricity_sector_technoflows.ipynb  holi_coal_exit.ipynb  initialize_notebook.ipynb
premise/: __init__.py  _bw2_backend_compat.py  activity_maps.py  battery.py  biomass.py  brightway2.py  brightway25.py  capacity.py  carbon_dioxide_removal.py  cars.py  cement.py  clean_datasets.py  custom.py  data_collection.py  direct_air_capture.py  ecoinvent_modification.py  electricity.py  electricity_tools.py  emissions.py  exceptions.py  export.py  external.py  external_data_validation.py  filesystem_constants.py  final_energy.py  fuels.py  geomap.py  heat.py  incremental.py  interventions.py  inventory_imports.py  logger.py  mapping_overview.xlsx  mapping_overview2.xlsx  marginal_mixes.py  metals.py  mining.py  natural_gas.py  new_database.py  ozone.py  (+16 more)
premise_ui/: __init__.py  __main__.py  cli.py
rmnd_lca/: __init__.py  activity_maps.py  cars.py  cement.py  clean_datasets.py  data_collection.py  database.py  ecoinvent_modification.py  eimod.py  electricity.py  export.py  geomap.py  inventory_imports.py  steel.py  utils.py
tests/: build_and_audit_metals_markets.py  elec.xlsx  lcia_regression.py  mapping.xlsx  metals_secondary_from_old_markets_check.py  outliers.xlsx  test_activity_maps.py  test_brightway_writers.py  test_cars.py  test_cdr_allocation_coproducts.py  test_cdr_energy_adjustment.py  test_cement_energy_adjustment.py  test_clean_datasets.py  test_data_collection.py  test_electricity.py  test_emissions.py  test_export.py  test_external.py  test_filesystem_constants.py  test_geomap.py  test_import_inventories.py  test_lcia_regression.py  test_metals.py  test_new_database.py  test_ozone.py  test_pathways.py  test_premise_ui_cli.py  test_premise_ui_install_smoke.py  test_premise_ui_scaffold.py  test_process.py  test_process_ei310_EN15804.py  test_process_ei310_conseq.py  test_process_ei310_cutoff.py  test_process_ei310_cutoff_datapackage.py  test_process_ei310_cutoff_increment.py  test_process_ei310_cutoff_olca.py  test_process_ei310_cutoff_simapro.py  test_process_ei310_cutoff_super.py  test_process_ei311_EN15804.py  test_process_ei311_conseq.py  (+29 more)
witch-scenarios/: premise_witch_test.ipynb  witch_SSP2-Base.csv
(+920 files in other folders)
