[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "premise"
authors = [
  { name="Romain Sacchi", email="romain.sacchi@psi.ch" },
  { name="Alois Dirnaichner", email="dirnaichner@pik-potsdam.de" },
  { name="Chris Mutel", email="cmutel@gmail.com" },
  { name="Alvaro Hahn Menacho", email="alvaro.hahn-menacho@psi.ch" }
]
maintainers = [
  { name="Romain Sacchi", email="romain.sacchi@psi.ch" }
]
description = "Coupling IAM output to ecoinvent LCA database ecoinvent for prospective LCA"
readme = "README.md"
dynamic = ["dependencies", "version"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"

[project.urls]
source = "https://github.com/polca/premise"
homepage = "https://github.com/polca/premise"
tracker = "https://github.com/polca/premise/issues"

[project.optional-dependencies]

docs = [
    "sphinx-rtd-theme"
]
bw25 = [
    "bw2calc >=2.0.1",
    "bw2data >=4.3",
    "bw2io >=0.9.4",
    "bottleneck",
    "ecoinvent_interface",
    "constructive-geometries>=0.9.5",
    "numpy <2.0.0",
    "cryptography",
    "datapackage",
    "pandas",
    "platformdirs",
    "premise_gwp",
    "prettytable",
    "pyarrow",
    "pycountry",
    "pyYaml",
    "requests",
    "schema",
    "scipy<1.14.0",  # scipy 1.14.0 is not compatible with bw2calc>2.0.1
    "sparse>=0.14.0",
    "wurst>=0.4",
    "xarray<=2024.2.0",
    "tqdm",
    "unfold",
]

bw2 = [
    "bw2calc ==1.8.2",
    "bw2data == 3.6.6",
    "bw2io ==0.8.12",
    "bottleneck",
    "ecoinvent_interface",
    "constructive-geometries>=0.9.5",
    "numpy <2.0.0",
    "cryptography",
    "datapackage",
    "pandas",
    "platformdirs",
    "premise_gwp",
    "prettytable",
    "pyarrow",
    "pycountry",
    "pyYaml",
    "requests",
    "schema",
    "sparse>=0.14.0",
    "wurst>=0.4",
    "xarray<=2024.2.0",
    "tqdm",
    "unfold",
]



[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["premise*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "premise.__version__"}

[tool.pytest.ini_options]
markers = [
    # marks tests that require ecoinvent (to be disabled on Travis)
    "ecoinvent",
    "serial"
]
norecursedirs = [
    "dist",
    "build",
    ".tox"
]
testpaths = ["tests/*.py"]

[tool.flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = ["E203", "W503"]
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
]

[tool.setuptools.package-data]
premise = [
    "data/**/*.txt",
    "data/**/*.csv",
    "data/**/*.json",
    "data/**/*.yml",
    "data/**/*.yaml",
    "data/**/*.xlsx",
    "data/**/*.pickle",
    "iam_variables_mapping/*.yaml",
    "iam_variables_mapping/*.xlsx",
    "iam_variables_mapping/topologies/*.json",
    "fuels/*.py",
]
